--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Chat Program</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
 </head>
+
 <body>
-    <h1>Hello World</h1>
+
+    <div class="grid h-screen">
+        <div class="flex max-h-screen flex-col">
+            <div class="header text-md border-b border-gray-200 py-4 pl-4 font-bold">Chat</div>
+            <div class="chat-messages flex-1 overflow-y-scroll">
+                <ul class="space-y-4">
+                    <li>
+                        <div class="flex space-x-2 pl-2 pt-2">
+                            <div class="flex-shrink-0">
+                                <div
+                                    class="h-10 w-10 rounded-full bg-indigo-400 flex items-center justify-center font-bold text-white">
+                                    L</div>
+                            </div>
+                            <div class="flex flex-col">
+                                <div class="flex items-baseline space-x-2">
+                                    <div class="font-bold">Damir</div>
+                                    <div class="text-sm text-gray-400">5:20 pm</div>
+                                </div>
+                                <div class="text-sm text-gray-500">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit. Eveniet est ipsa cupiditate dolorem! Libero aliquam aut soluta incidunt
+                                    aspernatur error voluptatibus provident tenetur eaque, voluptatum, quam dolor nemo
+                                    suscipit qui!</div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="input-container p-4">
+                <div class="input-area flex h-28 w-full flex-col space-y-2 rounded-2xl border-2 border-gray-200 p-3">
+                    <textarea class="w-full flex-1 outline-none"></textarea>
+                    <div class="buttons flex flex-row items-center space-x-2 align-baseline">
+                        <div class="flex-1">
+                        </div>
+                        <div>
+                            <button class="float-right rounded-xl bg-indigo-500 p-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="h-5 w-5 text-indigo-600">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
