--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,6 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/style.css">
-    <script src="/script.js"></script>
 </head>
 
 <body>
@@ -17,27 +16,9 @@
     <div class="grid h-screen">
         <div class="flex max-h-screen flex-col">
             <div class="header text-md border-b border-gray-200 py-4 pl-4 font-bold">Chat</div>
-            <div class="chat-messages flex-1 overflow-y-scroll">
+            <div class="chat-messages flex-1 overflow-y-scroll pl-5">
                 <ul class="space-y-4">
-                    <li>
-                        <div class="flex space-x-2 pl-2 pt-2">
-                            <div class="flex-shrink-0">
-                                <div
-                                    class="h-10 w-10 rounded-full bg-indigo-400 flex items-center justify-center font-bold text-white">
-                                    L</div>
-                            </div>
-                            <div class="flex flex-col">
-                                <div class="flex items-baseline space-x-2">
-                                    <div class="font-bold">Damir</div>
-                                    <div class="text-sm text-gray-400">5:20 pm</div>
-                                </div>
-                                <div class="text-sm text-gray-500">Lorem ipsum dolor sit amet, consectetur adipisicing
-                                    elit. Eveniet est ipsa cupiditate dolorem! Libero aliquam aut soluta incidunt
-                                    aspernatur error voluptatibus provident tenetur eaque, voluptatum, quam dolor nemo
-                                    suscipit qui!</div>
-                            </div>
-                        </div>
-                    </li>
+                    <!-- Hier werden die empfangenen Nachrichten angezeigt -->
                 </ul>
             </div>
             <div class="input-container p-4">
@@ -60,6 +41,8 @@
             </div>
         </div>
     </div>
+
+    <script src="/script.js"></script>
 </body>
 
 </html>
