added a timestamp to the message

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
                             <input type="text" id="username-input" placeholder="Benutzername">
                         </div>
                         <div>
-                            <button class="float-right rounded-xl bg-indigo-500 p-2">
+                            <button class="float-right rounded-xl bg-indigo-500 p-2" onclick="sendMessage()">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="currentColor" class="h-5 w-5 text-indigo-600">
                                     <path stroke-linecap="round" stroke-linejoin="round"
