--- a/client/index.html
+++ b/client/index.html
@@ -6,36 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Chat Program</title>
-
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-
-    <div class="grid h-screen">
-        <div class="flex max-h-screen flex-col">
-            <div class="header text-md border-b border-gray-200 py-4 pl-4 font-bold">Chat</div>
-            <div class="chat-messages flex-1 overflow-y-scroll">
-                <ul class="space-y-4 pl-4">
-                    <!-- Hier werden die empfangenen Nachrichten angezeigt -->
-                </ul>
+    <div class="grid">
+        <div class="max-h-screen flex-col">
+            <div class="header">My Chat Program</div>
+            <div class="chat-messages">
+                <ul></ul>
             </div>
-            <div class="input-container p-4">
-                <div class="input-area flex h-28 w-full flex-col space-y-2 rounded-2xl border-2 border-gray-200 p-3">
-                    <textarea class="w-full flex-1 outline-none"></textarea>
-                    <div class="buttons flex flex-row items-center space-x-2 align-baseline">
-                        <div class="flex-1">
+            <div class="input-container">
+                <div class="input-area">
+                    <textarea></textarea>
+                    <div class="buttons">
+                        <div>
                             <input type="text" id="username-input" placeholder="Benutzername">
                         </div>
                         <div>
-                            <button class="float-right rounded-xl bg-indigo-500 p-2" onclick="sendMessage()">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
-                                    stroke-width="1.5" stroke="currentColor" class="h-5 w-5 text-indigo-600">
-                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                        d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
-                                </svg>
-                            </button>
+                            <button onclick="sendMessage()">Senden</button>
                         </div>
                     </div>
                 </div>
