minor text adjustments

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -31,7 +31,7 @@
 
     <div class="overlay" id="overlay">
         <div class="popup">
-            <h2>Bitte einen Benutzernamen eingeben</h2>
+            <h2>Um dem Chat beizutreten, bitte einen Benutzernamen eingeben</h2>
             <input type="text" id="username-input" placeholder="Benutzername">
             <button onclick="joinChat()">Beitreten</button>
         </div>
