added first participants box iteration

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,14 @@
             <div class="chat-messages">
                 <ul></ul>
             </div>
+            <!-- <h2 class="font-bold self-center">Active Users</h2>
+            <div class="flex flex-col gap-1" id="users"></div>
+            <div class="flex"> -->
+            <div id="users-list" class="floating-container">
+                <h3>Teilnehmer:</h3>
+                <ul id="users"></ul>
+            </div>
+
             <div class="input-container">
                 <div class="input-area">
                     <textarea placeholder="Chatnachricht eingeben"></textarea>
@@ -36,6 +44,8 @@
             <button onclick="joinChat()">Beitreten</button>
         </div>
     </div>
+
+
 
     <script src="/script.js"></script>
 </body>
