--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,11 @@
             <div class="chat-messages">
                 <ul></ul>
             </div>
+            <div id="users-list" class="floating-container">
+                <h3>Teilnehmer:</h3>
+                <ul id="users"></ul>
+            </div>
+
             <div class="input-container">
                 <div class="input-area">
                     <textarea placeholder="Chatnachricht eingeben"></textarea>
@@ -36,6 +41,8 @@
             <button onclick="joinChat()">Beitreten</button>
         </div>
     </div>
+
+
 
     <script src="/script.js"></script>
 </body>
