Revert "Merge branch 'main'"
This reverts commit 9365bf8d6de1cfc58f4d73c3b7bdf451b2d12387, reversing
changes made to 497c3c2291bab1036050b9e6dac6518b0edbb374.

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,11 @@
             <div class="chat-messages">
                 <ul></ul>
             </div>
+            <div id="users-list" class="floating-container">
+                <h3>Teilnehmer:</h3>
+                <ul id="users"></ul>
+            </div>
+
             <div class="input-container">
                 <div class="input-area">
                     <textarea placeholder="Chatnachricht eingeben"></textarea>
